# mag-mutex

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md  analyze_benchmark.py  benchmark.r  benchmark_analyze.R  benchmark_results.csv  cv_analyze.R  cv_benchmark.csv
include/: mag_mutex.h  mag_thread.h
src/: mag_asm.S  mag_asm_defs.h  mag_mutex.c  mag_thread.c  main.c  main_cond.c
tests/: bench_fiber.c  bench_mutex.c  bench_omp.c  test_benchmark.c  test_cond.c  test_integration.c  test_sanity.c  test_thread.c  test_utils.h
